Fix some visual bugs on mobile

--- a/stylesheets/scss/core/_animations.scss
+++ b/stylesheets/scss/core/_animations.scss
@@ -1,14 +1,3 @@
-// classes used
-
-.fadeOut {
-    animation: 1s forwards ease-in fadeOut;
-}
-
-.goDown {
-    animation: 1s forwards ease-in goDown;
-}
-
-
 // keyframes
 
 @keyframes fadeIn {
