--- a/stylesheets/scss/core/_reset.scss
+++ b/stylesheets/scss/core/_reset.scss
@@ -18,7 +18,7 @@ button {
     font: 200 30px $primaryFont;
     color: $secondaryColor;
     background-color: $primaryColor;
-    width: 32px;
+    width: 30px;
     cursor: pointer;
 }
 
