--- a/stylesheets/scss/modules/_modal.scss
+++ b/stylesheets/scss/modules/_modal.scss
@@ -52,3 +52,12 @@
         }
     }
 }
+
+
+.fadeOut {
+    animation: 1s forwards ease-in fadeOut;
+}
+
+.goDown {
+    animation: 1s forwards ease-in goDown;
+}
